Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
- #1928: bind information is centralized in LDAPServerAccess objects
Bug fixes
~~~~~~~~~
- #1976: don't remove contentish directories in profile purge
- #1970: can't make a snapshot with LDAPServerAccess objects 
- #1959: provide possibility to hide a directory
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 